# Intersect

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt  supabase_schema.sql
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: notifications.py  patient_mode.py  patients.py  router.py
backend/app/core/: exceptions.py  security.py
backend/app/schemas/: appointment.py  known_face.py  medication.py  patient.py  restricted_area.py  survey.py
backend/app/services/: appointment_service.py  known_face_service.py  medication_service.py  notification_service.py  patient_service.py  restricted_area_service.py  survey_service.py
backend/app/services/ai/: __init__.py  ai_log.py  context_builder.py  intent.py  llm.py  pipeline.py  transcribe.py  tts.py
backend/migrations/: add_dementia_care_fields.sql  add_known_faces_photo_url.sql  add_patient_ai_logs.sql  add_restricted_areas.sql  add_severity_history_diagnosis_details.sql  fix_lat_lng_overflow.sql
backend/scripts/: test_supabase.py
backend/tests/test_api/: test_health.py
docs/: API_DESIGN.md  BACKEND_ARCHITECTURE.md  DB_SCHEMA.md  DESIGN_INDEX.md  FRONTEND_DESIGN.md  SCHEMA.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: usePatient.ts  usePatients.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Landing.tsx  Login.tsx  PatientList.tsx  PatientNew.tsx  Profile.tsx  Signup.tsx
(+25 files in other folders)
